--- a/package.json
+++ b/package.json
@@ -65,5 +65,13 @@
     "eslint": "^7.29.0",
     "source-map-support": "^0.5.19",
     "typescript": "~4.3.4"
+  },
+  "nodemonConfig": {
+    "verbose": true,
+    "ext": ".ts",
+    "watch": [
+      "src/"
+    ],
+    "exec": "npm start"
   }
 }
