feat: elasticsearch datasource + dotenv

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,7 @@ typings/
 # Cache used by TypeScript's incremental build
 
 \*.tsbuildinfo
+tsconfig.tsbuildinfo
 
 .npm-cache
 .docker/elasticdata
