--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@loopback/rest": "^10.0.0",
     "@loopback/rest-explorer": "^3.3.2",
     "@loopback/service-proxy": "^3.2.2",
+    "dotenv": "^10.0.0",
+    "loopback-connector-es": "^1.4.1",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
