--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@loopback/rest": "^10.0.0",
     "@loopback/rest-explorer": "^3.3.2",
     "@loopback/service-proxy": "^3.2.2",
+    "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "loopback-connector-esv6": "2.1.1",
     "tslib": "^2.0.0"
