--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DEBUG=*
+DEBUG=elasticsearch,loopback:connector:elasticsearch,loopback
 ELASTIC_SEARCH_HOST=http://elasticsearch:9200
 ELASTIC_SEARCH_REQUEST_TIMEOUT=30000
 ELASTIC_SEARCH_PING_TIMEOUT=3000
