feat: rabbitmq manager

--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "@loopback/rest": "^10.0.0",
     "@loopback/rest-explorer": "^3.3.2",
     "@loopback/service-proxy": "^3.2.2",
+    "@types/amqp-connection-manager": "^2.0.12",
     "@types/amqplib": "^0.8.2",
+    "amqp-connection-manager": "^3.7.0",
     "amqplib": "^0.8.0",
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
