--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ajv": "^8.6.3",
     "amqp-connection-manager": "^3.7.0",
     "amqplib": "^0.8.0",
+    "class-transformer": "^0.5.1",
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "loopback-connector-esv6": "2.1.1",
