--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,8 @@
     "experimentalDecorators": true,
     "noImplicitAny": false
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "config.js"
+  ]
 }
