feat: keycloak authentication

--- a/package.json
+++ b/package.json
@@ -50,11 +50,14 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^3.1.0",
+    "@loopback/authentication-jwt": "^0.6.0",
     "@loopback/boot": "^3.4.2",
     "@loopback/core": "^2.16.2",
     "@loopback/repository": "^3.7.1",
     "@loopback/rest": "^10.0.0",
     "@loopback/rest-explorer": "^3.3.2",
+    "@loopback/security": "^0.2.18",
     "@loopback/service-proxy": "^3.2.2",
     "ajv": "^8.6.3",
     "amqp-connection-manager": "^3.7.0",
